# Dailies

backend/: .gitignore  Cargo.toml  Dockerfile
backend/src/: main.rs  spotify.rs  state.rs
backend/src/connections/: mod.rs
backend/src/geo_data/: aus.json  world.json
backend/src/geo_guessr/: api.rs  mod.rs
backend/src/guess_the_song/: api.rs  mod.rs
backend/src/state/: games.rs  geoguessr.rs  guessthesong.rs  lobby.rs  mod.rs
frontend/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  NavBar.jsx  apiConfig.ts  index.css  main.tsx
frontend/src/components/: Connecting.tsx  Ending.tsx  ErrorSnackbar.tsx  HomeGrid.tsx  HomeGridCell.tsx  NavBar.tsx  PreparingPlaylist.tsx
frontend/src/components/audio/: AudioPlayer.tsx  AudioProvider.tsx  AudioVisualizer.tsx  AudioVolumeSlider.tsx
frontend/src/components/loading/: Connecting.tsx  GameLoading.tsx
frontend/src/components/modals/: GTSHomeModal.tsx  HomeModal.tsx
frontend/src/icons/: CopyIcon.tsx  Crown.tsx  CrownIcon.tsx  GTSIcon.tsx  GeoIcon.tsx  HomeIcon.tsx  NotFoundIcon.tsx  PencilIcon.tsx  Trophy.tsx
frontend/src/routes/: Home.tsx  NotFound.tsx
frontend/src/routes/GeoGuessr/: Game.tsx  Gameplay.tsx  ResultMap.tsx  Reveal.tsx  WaitingRoom.tsx
frontend/src/routes/GuessTheSong/: AudioPlayer.tsx  Ending.tsx  Game.tsx  Gameplay.tsx  GuessTheSongGame.tsx  Landing.tsx  WaitingRoom.tsx
frontend/src/routes/Home/: Home.tsx  HomeGrid.tsx  HomeGridCell.tsx
frontend/src/utils/: types.ts  util.ts
(+2 files in other folders)
