[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["ws"] }
dotenv = "0.15.0"
futures-util = "0.3.31"
rand = "0.9.2"
redis = { version = "1.0.0", features = ["tokio-comp"] }
rspotify = "0.15.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.7", features = ["cors"] }
uuid = { version = "1.19.0", features =["v4"] }
